--- a/html/nav_slider.css
+++ b/html/nav_slider.css
@@ -94,32 +94,33 @@ ul li:nth-child(6) a i
     margin-top: 10px;
 }
 nav .nav_bar ul li:nth-child(4){
-    animation:nav_show 0.8s ease-in 0s 1 forwards;
+    animation:nav_show 0.45s ease-in 0s 1 forwards;
 }
 nav .nav_bar ul li:nth-child(3),
 nav .nav_bar ul li:nth-child(5){
-    animation:nav_show 0.8s ease-in 0s 1 forwards;
+    animation:nav_show 0.9s ease-in 0s 1 forwards;
 }
 nav .nav_bar ul li:nth-child(2),
 nav .nav_bar ul li:nth-child(6){
-    animation:nav_show 0.8s ease-in 0s 1 forwards;
+    animation:nav_show 1.35s ease-in 0s 1 forwards;
 }
 nav .nav_bar ul li:nth-child(1),
 nav .nav_bar ul li:nth-child(7){
-    animation:nav_show 0.8s ease-in 0s 1 forwards;
+    animation:nav_show 1.8s ease-in 0s 1 forwards;
 }
 
 @keyframes nav_show{
     0%{
-        transform:translate(0,-130px);
+        /* transform:translate(0,-130px); */
         opacity:0;
     }
-    90%{
-        transform:translate(0,8px);
-        opacity:1
+    80%{
+        transform:translate(0,9px);
+        opacity:1;
     }
+    
     100%{
-        transform:translate(0,0);
+        transform:translate(0,5px);
         opacity:1
     }
 }
