--- a/html/nav_slider.css
+++ b/html/nav_slider.css
@@ -113,6 +113,7 @@ nav .nav_bar ul li:nth-child(7){
     0%{
         /* transform:translate(0,-130px); */
         opacity:0;
+        filter:blur(10px);
     }
     80%{
         transform:translate(0,9px);
